--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,7 +43,10 @@
 
     <!-- Dashboard header + Refresh -->
     <div class="flex flex-col md:flex-row justify-between items-center gap-6">
-      <h1 class="text-2xl font-bold text-gray-800">Hello, {{ current_user.email }}</h1>
+      <h2 class="mb-6 text-3xl font-bold">
+        Hello, {{ current_user.first_name }}
+      </h2>
+      
       <form action="{{ url_for('refresh_jobs') }}" method="get">
         <button type="submit" class="bg-blue-500 px-4 py-2 rounded-md text-white font-semibold hover:bg-blue-600 transition">🔄 Refresh Job List</button>
       </form>
